k8s/store/service-store-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: store-v2
  namespace: store-ns
spec:
  selector:
    app: store
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
